public interface Landable {

    public boolean landingCheck(Runway r);




}
