public class Runway {

   public int length, width;

   public Runway(int length, int width){
       this.length = length;
       this.width = width;
   }






}
